fix gaps in quadrants

--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ html,body{
     margin-right: auto;
     margin-top: 10vw;
     height: 450px;
-    width: 450px;
+    width: 442px;
     border: black solid;
     border-width: 30px;
     border-radius: 50%;
@@ -32,6 +32,12 @@ html,body{
     display: inline-block;
     height: 196px;
     width: 193px;
+    margin-left: -2px;
+    margin-right: -2px;
+}
+
+.top, .bottom {
+	margin-bottom: -5px;
 }
 
 .top-left {
